--- a/greenpaper/core/pom.xml
+++ b/greenpaper/core/pom.xml
@@ -19,15 +19,52 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>src/main/filter</directory>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>false</filtering>
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${filtered-sources}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/filter</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>add-resource</id>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<directory>${filtered-sources}</directory>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -50,4 +87,8 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<properties>
+		<filtered-sources>${project.build.directory}/filtered-sources</filtered-sources>
+	</properties>
 </project>
