Build of greenpepper client jar
Use this to test
java -mx252m -cp target/greenpepper-client-4.0-SNAPSHOT-complete.jar:/media/data/workspace/git/greenpaper/greenpaper-confluence/greenpaper-confluence-demo/target/greenpepper-confluence-demo-4.0-SNAPSHOT-fixtures.jar:/media/data/workspace/git/greenpaper/greenpaper-confluence/greenpaper-confluence-demo/target/greenpepper-confluence-demo-4.0-SNAPSHOT.jar com.greenpepper.runner.Main ../../greenpaper-confluence/greenpaper-confluence-demo/src/fixture/specs/Demo/Bank.html toto.out

--- a/greenpaper-confluence/greenpaper-confluence5-plugin/pom.xml
+++ b/greenpaper-confluence/greenpaper-confluence5-plugin/pom.xml
@@ -172,6 +172,26 @@
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jul-to-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -187,6 +207,26 @@
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jul-to-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
