--- a/greenpaper/greenpepper-server/pom.xml
+++ b/greenpaper/greenpepper-server/pom.xml
@@ -177,6 +177,11 @@
 			<scope>test</scope>  
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		
 <!--		
 		<dependency>
 			<groupId>com.h2database</groupId>
