* Fixing of the remote runner * Fixing of the classpath edition

--- a/greenpaper-confluence/greenpaper-confluence5-plugin/pom.xml
+++ b/greenpaper-confluence/greenpaper-confluence5-plugin/pom.xml
@@ -170,6 +170,11 @@
 		<dependency>
 			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>greenpepper</groupId>
+			<artifactId>greenpepper-client</artifactId>
 			<classifier>complete</classifier>
 			<version>${project.version}</version>
 			<scope>runtime</scope>
