Build the project
Change dependency on license (use de.schlichtherle.truelicense:truelicense-[core|xml] fix #2
Add Dockerfile for build

docker build --tag green-build .
docker run -d --name green green-build true
docker cp green:/usr/src/app/greenpaper-confluence/greenpaper-confluence5-plugin/target/greenpepper-confluence5-plugin-4.0-SNAPSHOT.jar .

--- a/greenpaper/greenpepper-license/pom.xml
+++ b/greenpaper/greenpepper-license/pom.xml
@@ -27,17 +27,20 @@
             <artifactId>commons-io</artifactId>
             <version>1.2</version>
         </dependency>
-        <dependency>
-            <groupId>truelicense</groupId>
-            <artifactId>truelicense</artifactId>
-            <version>1.29</version>
-        </dependency>
-        <dependency>
-            <groupId>truelicense</groupId>
-            <artifactId>truexml</artifactId>
-            <version>1.29</version>
-        </dependency>
-        <dependency>
+        
+<dependency>
+        <groupId>de.schlichtherle.truelicense</groupId>
+        <artifactId>truelicense-core</artifactId>
+        <version>1.33</version>
+</dependency>
+
+<dependency>
+        <groupId>de.schlichtherle.truelicense</groupId>
+        <artifactId>truelicense-xml</artifactId>
+        <version>1.33</version>
+</dependency>
+
+<dependency>
             <groupId>greenpepper</groupId>
             <artifactId>greenpepper-client</artifactId>
             <version>${project.version}</version>
