--- a/extensions-external/ognl/pom.xml
+++ b/extensions-external/ognl/pom.xml
@@ -13,7 +13,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper-open</groupId>
+			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
