--- a/extensions-external/grails/grails/pom.xml
+++ b/extensions-external/grails/grails/pom.xml
@@ -20,7 +20,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper-open</groupId>
+			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
