--- a/extensions-external/php/pom.xml
+++ b/extensions-external/php/pom.xml
@@ -29,7 +29,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper-open</groupId>
+			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
