--- a/extensions-external/spring/pom.xml
+++ b/extensions-external/spring/pom.xml
@@ -13,12 +13,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper-open</groupId>
+			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>greenpepper-open</groupId>
+			<groupId>greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<type>test-jar</type>
 			<version>${project.version}</version>
