--- a/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-maven-runner/pom.xml
@@ -1,28 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <!--
-       - Basic Information
-       -->
-    <artifactId>greenpepper-maven-runner</artifactId>
-    <packaging>jar</packaging>
-    <name>GreenPepper Maven2 Runner</name>
-    <parent>
-        <artifactId>greenpepper-base</artifactId>
-        <groupId>greenpepper</groupId>
-        <version>4.0-SNAPSHOT</version>
-    </parent>
+	<!-- - Basic Information -->
+	<artifactId>greenpepper-maven-runner</artifactId>
+	<packaging>jar</packaging>
+	<name>GreenPepper Maven2 Runner</name>
+	<parent>
+		<artifactId>greenpepper-base</artifactId>
+		<groupId>greenpepper</groupId>
+		<version>4.0-SNAPSHOT</version>
+	</parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>greenpepper</groupId>
-            <artifactId>greenpepper-core</artifactId>
-            <version>${project.version}</version>
+	<dependencies>
+		<dependency>
+			<groupId>greenpepper</groupId>
+			<artifactId>greenpepper-core</artifactId>
+			<version>${project.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>greenpepper</groupId>
-            <artifactId>greenpepper-extensions-java</artifactId>
-            <version>${project.version}</version>
+		<dependency>
+			<groupId>greenpepper</groupId>
+			<artifactId>greenpepper-extensions-java</artifactId>
+			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.ant</groupId>
@@ -38,41 +37,46 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-embedder</artifactId>
-            <version>2.0.4</version>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-embedder</artifactId>
+			<version>2.0.4</version>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
-    <scm>
-        <connection>https://github.com/greenpeppersoftware/maven-runner.git</connection>
-        <url>https://github.com/greenpeppersoftware/maven-runner</url>
-    </scm>
+	<scm>
+		<connection>https://github.com/greenpeppersoftware/maven-runner.git</connection>
+		<url>https://github.com/greenpeppersoftware/maven-runner</url>
+	</scm>
 
-    <build>
+	<build>
 		<plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptor>src/main/assembly/dep.xml</descriptor>
-                </configuration>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>make-assembly</id>
 						<phase>package</phase>
 						<goals>
-							<goal>attached</goal>
+							<goal>single</goal>
 						</goals>
+						<configuration>
+							<descriptor>src/main/assembly/dep.xml</descriptor>
+							<archive>
+								<manifest>
+									<mainClass>com.greenpepper.maven.runner.Main</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
 					</execution>
 				</executions>
-            </plugin>
-            <plugin>
-            	<artifactId>maven-surefire-plugin</artifactId>
-            	<configuration>
-            		<skipTests>true</skipTests>
-            	</configuration>
-            </plugin>
-        </plugins>
-    </build>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
