--- a/extensions-external/php/pom.xml
+++ b/extensions-external/php/pom.xml
@@ -44,9 +44,9 @@
 			<version>1.5.6</version>
 		</dependency>
 		<dependency>
-			<groupId>javassist</groupId>
+			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.8.0.GA</version>
+			<version>3.20.0-GA</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -82,8 +82,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
