--- a/greenpepper-confluence/greenpepper-confluence3-demo/pom.xml
+++ b/greenpepper-confluence/greenpepper-confluence3-demo/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<groupId>greenpepper</groupId>
-		<artifactId>greenpepper-base</artifactId>
+		<artifactId>greenpepper-confluence</artifactId>
 		<version>4.0-SNAPSHOT</version>
 	</parent>
 
