--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -4,6 +4,7 @@
     <!--
        - Basic Information
        -->
+    <groupId>greenpepper</groupId>
     <artifactId>greenpepper-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>GreenPepper Maven2 Plugin</name>
@@ -64,11 +65,68 @@
             <version>1.0</version>
             <scope>test</scope>
         </dependency>
-     	<dependency>
-			<groupId>org.apache.xmlrpc</groupId>
-			<artifactId>xmlrpc-server</artifactId>
-			<scope>test</scope>
-		</dependency>
     </dependencies>
 
+    <scm>
+        <connection>https://github.com/greenpeppersoftware/maven-plugin.git</connection>
+        <url>https://github.com/greenpeppersoftware/maven-plugin</url>
+    </scm>
+
+    <build>
+<!--         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <configuration>
+                            <tasks>
+                                <copy file="${settings.localRepository}/greenpepper-open/greenpepper-core/${pom.version}/greenpepper-core-${pom.version}.jar" tofile="src/test/resources/greenpepper-core.jar" />
+								<copy file="${settings.localRepository}/greenpepper-open/greenpepper-extensions-java/${pom.version}/greenpepper-extensions-java-${pom.version}.jar" tofile="src/test/resources/greenpepper-extensions-java.jar" />
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+        	<plugins>
+        		This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.
+        		<plugin>
+        			<groupId>org.eclipse.m2e</groupId>
+        			<artifactId>lifecycle-mapping</artifactId>
+        			<version>1.0.0</version>
+        			<configuration>
+        				<lifecycleMappingMetadata>
+        					<pluginExecutions>
+        						<pluginExecution>
+        							<pluginExecutionFilter>
+        								<groupId>
+        									org.apache.maven.plugins
+        								</groupId>
+        								<artifactId>
+        									maven-antrun-plugin
+        								</artifactId>
+        								<versionRange>
+        									[1.3,)
+        								</versionRange>
+        								<goals>
+        									<goal>run</goal>
+        								</goals>
+        							</pluginExecutionFilter>
+        							<action>
+        								<ignore></ignore>
+        							</action>
+        						</pluginExecution>
+        					</pluginExecutions>
+        				</lifecycleMappingMetadata>
+        			</configuration>
+        		</plugin>
+        	</plugins>
+        </pluginManagement> -->
+    </build>
 </project>
