--- a/greenpepper/greenpepper-client/pom.xml
+++ b/greenpepper/greenpepper-client/pom.xml
@@ -65,19 +65,21 @@
 			</exclusions>
 		</dependency>
 
-<!-- 		<dependency>
+		<dependency>
 			<groupId>xmlrpc</groupId>
 			<artifactId>xmlrpc</artifactId>
 			<version>2.0.1</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-client</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-common</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 
 		<dependency>
