--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>greenpepper-base</artifactId>
         <groupId>greenpepper</groupId>
-        <version>2.10-SNAPSHOT</version>
+        <version>2.10</version>
     </parent>
 
     <dependencies>
