--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- - Basic Project Information -->
 	<groupId>greenpepper</groupId>
 	<artifactId>greenpepper-base</artifactId>
 	<packaging>pom</packaging>
-	<version>2.10-SNAPSHOT</version>
+	<version>2.10</version>
 	<name>GreenPepper</name>
 
 	<properties>
@@ -71,116 +70,12 @@
 	</dependencyManagement>
 
 	<!-- - Extra project information -->
-	<url>https://www.greenpeppersoftware.com</url>
+    <url>http://strator-dev.github.io/greenpepper/</url>
 	<inceptionYear>2005</inceptionYear>
-	<organization>
-		<name>Pyxis Technologies</name>
-		<url>http://www.pyxis-tech.com</url>
-	</organization>
-	<developers>
-		<developer>
-			<id>fbeauregard</id>
-			<name>Francois Beauregard</name>
-			<email>fbeauregard@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Stakeholder</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>abrissette</id>
-			<name>Andre Brissette</name>
-			<email>abrissette@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Product Owner</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>lthibault</id>
-			<name>Louis Thibault</name>
-			<email>lthibault@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>ScrumMaster</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>clapointe</id>
-			<name>Christian Lapointe</name>
-			<email>clapointe@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>jchuet</id>
-			<name>Jean-Christophe Huet</name>
-			<email>jchuet@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>lcobos</id>
-			<name>Laurent Cobos</name>
-			<email>lcobos@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-
-		<developer>
-			<id>vtence</id>
-			<name>Vincent Tence</name>
-			<email>vtence@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>gcarey</id>
-			<name>Gilles Carey</name>
-			<email>gcarey@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>ehardy</id>
-			<name>Etienne Hardy</name>
-			<email>ehardy@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>fdenommee</id>
-			<name>Francois Denommee</name>
-			<email>fdenommee@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-	</developers>
-	<contributors>
-		<contributor>
-			<name>Marc-Andre Thibodeau</name>
-			<email>mathibodeau@pyxis-tech.com</email>
-			<organization>Pyxis Technologies</organization>
-		</contributor>
-	</contributors>
-
 	<scm>
-		<connection>https://github.com/greenpeppersoftware/greenpepper-base.git</connection>
-		<url>https://github.com/greenpeppersoftware/greenpepper-base</url>
+        <connection>https://github.com/strator-dev/greenpepper.git</connection>
+        <developerConnection>scm:git:https://github.com/strator-dev/greenpepper.git</developerConnection>
+		<url>https://github.com/strator-dev/greenpepper</url>
 	</scm>
 
 	<!-- - Configure the build plugins -->
