--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>2.10</version>
+		<version>2.10-SNAPSHOT</version>
 	</parent>
 
     <dependencies>
