--- a/greenpepper-confluence/greenpepper-confluence-plugin/pom.xml
+++ b/greenpepper-confluence/greenpepper-confluence-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper-confluence</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>2.10</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 	<artifactId>greenpepper-confluence3-plugin</artifactId>
 	<name>GreenPepper Confluence3 Plugin</name>
