--- a/greenpepper/greenpepper-client/pom.xml
+++ b/greenpepper/greenpepper-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>2.10</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 	<artifactId>greenpepper-client</artifactId>
 	<packaging>jar</packaging>
