[maven-release-plugin] prepare for next development iteration

--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>4.0</version>
+		<version>4.1-SNAPSHOT</version>
 	</parent>
 
     <dependencies>
