--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>greenpepper</groupId>
 	<artifactId>greenpepper-base</artifactId>
 	<packaging>pom</packaging>
-	<version>4.0</version>
+	<version>4.1-SNAPSHOT</version>
 	<name>GreenPepper</name>
 
 	<properties>
