--- a/greenpepper-confluence-demo/pom.xml
+++ b/greenpepper-confluence-demo/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>greenpepper</groupId>
 		<artifactId>greenpepper-confluence</artifactId>
-		<version>4.0-beta1</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
