--- a/confluence/greenpepper-confluence-code/pom.xml
+++ b/confluence/greenpepper-confluence-code/pom.xml
@@ -3,7 +3,7 @@
 
     <parent>
         <artifactId>greenpepper-confluence</artifactId>
-        <groupId>greenpepper</groupId>
+        <groupId>com.github.stator-dev.greenpepper</groupId>
         <version>4.0-beta2-SNAPSHOT</version>
     </parent>
 	
@@ -12,7 +12,7 @@
 
     <dependencies>
         <!-- <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-client</artifactId>
             <version>${project.version}</version>
             <exclusions>
@@ -23,7 +23,7 @@
             </exclusions>
         </dependency> -->
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-server</artifactId>
             <version>${project.version}</version>
             <exclusions>
@@ -34,7 +34,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-license</artifactId>
             <version>${project.version}</version>
         </dependency>
