--- a/confluence/pom.xml
+++ b/confluence/pom.xml
@@ -3,8 +3,8 @@
 
 	<!-- - Basic Project Information -->
 	<parent>
-		<artifactId>greenpepper-base</artifactId>
-		<groupId>greenpepper</groupId>
+		<artifactId>greenpepper-open</artifactId>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
 		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
