--- a/extensions-external/db/pom.xml
+++ b/extensions-external/db/pom.xml
@@ -7,9 +7,9 @@
 	<packaging>jar</packaging>
 	
 	<parent>
-		<groupId>greenpepper-open</groupId>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -18,7 +18,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
@@ -77,7 +77,7 @@
 			</plugin>
 			<!--
 			<plugin>
-				<groupId>greenpepper</groupId>
+				<groupId>com.github.stator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
 				<version>${greenpepper.version}</version>
 				<configuration>
