--- a/extensions-external/guice/pom.xml
+++ b/extensions-external/guice/pom.xml
@@ -6,19 +6,19 @@
 	<name>GreenPepper Extensions Guice</name>
 
 	<parent>
-		<groupId>greenpepper-open</groupId>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<type>test-jar</type>
 			<version>${project.version}</version>
@@ -39,7 +39,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>greenpepper</groupId>
+				<groupId>com.github.stator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
 				<version>${greenpepper.maven.plugin.version}</version>
 				<configuration>
