--- a/extensions-external/ognl/pom.xml
+++ b/extensions-external/ognl/pom.xml
@@ -6,14 +6,14 @@
 	<name>GreenPepper Extensions OGNL</name>
 
 	<parent>
-		<groupId>greenpepper-open</groupId>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -27,7 +27,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>greenpepper</groupId>
+				<groupId>com.github.stator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
 				<version>${greenpepper.maven.plugin.version}</version>
 				<configuration>
