--- a/extensions-external/php/pom.xml
+++ b/extensions-external/php/pom.xml
@@ -7,9 +7,9 @@
     <name>GreenPepper Extensions PHP</name>
 
     <parent>
-		<groupId>greenpepper-open</groupId>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0-beta2-SNAPSHOT</version>
     </parent>
 
 	<properties>
@@ -29,7 +29,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
@@ -82,8 +82,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
