--- a/greenpepper-maven-runner/src/test/resources/pom.xml
+++ b/greenpepper-maven-runner/src/test/resources/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>greenpepper-open</groupId>
+    <groupId>com.github.stator-dev.greenpepper</groupId>
     <artifactId>greenpepper-samples</artifactId>
     <version>2.9</version>
     <packaging>jar</packaging>
@@ -10,7 +10,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>greenpepper</groupId>
+                <groupId>com.github.stator-dev.greenpepper</groupId>
                 <artifactId>greenpepper-maven-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
@@ -54,28 +54,28 @@
 
     <dependencies>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-core</artifactId>
             <version>${project.version}</version>
             <classifier>fixtures</classifier>
         </dependency>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-extensions-java</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>greenpepper-open</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-samples</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>greenpepper-open</groupId>
+            <groupId>com.github.stator-dev.greenpepper</groupId>
             <artifactId>greenpepper-samples</artifactId>
             <version>${project.version}</version>
             <classifier>fixtures</classifier>
