--- a/greenpepper-remote-agent/pom.xml
+++ b/greenpepper-remote-agent/pom.xml
@@ -3,8 +3,8 @@
 	
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
-		<groupId>greenpepper</groupId>
-		<version>4.0-SNAPSHOT</version>
+		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 	<artifactId>greenpepper-remote-agent</artifactId>
 	<name>GreenPepper Remote Agent</name>
@@ -45,7 +45,7 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.stator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-client</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
